Change typo of text-height to line-height

--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -2,7 +2,7 @@ footer {
 	background: #00ff00;
 	height: 60px;
 	width: 100%;
-	text-height: 30px;
+	line-height: 30px;
 	text-align: center;
 	vertical-align: middle;
 	bottom: 0;
