--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -4,6 +4,7 @@ footer {
 	width: 100%;
 	border-top: 1px solid #CCCCCC;
 	bottom: 0;
+	line-height: 30px;
 	position: fixed;
 	vertical-align: middle;
 	text-align: center;
