--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -2,10 +2,10 @@ header {
 	background-color: white;
 	height: 70px;
 	width: 100%;
-	border-bottom: 1px solid #CCCCCC
+	border-bottom: 1px solid #CCCCCC;	
 }
 
-.hbnblogo {
+.logo {
 	float: left;
 	background-position: 20px;
 	height: 60px;
@@ -13,4 +13,4 @@ header {
 	background-image: url("../images/logo.png");
 	background-repeat: no-repeat;
 	align-items: center;
-}	
+}
